day19/frontend.yml
apiVersion: v1
kind: Pod

metadata:
  name: frontend
  namespace: demo

  labels:
    app: frontend

spec:
  containers:

  - name: nginx

    image: nginx
