day19/mysql.yml
apiVersion: v1
kind: Pod

metadata:
  name: mysql
  namespace: demo

  labels:
    app: mysql

spec:
  containers:

  - name: mysql

    image: mysql:8
