day19/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: demo

spec:

  selector:

    app: backend

  ports:

  - port: 80
