day19/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: demo

spec:

  selector:

    app: frontend

  ports:

  - port: 80
