day19/mysql-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: mysql
  namespace: demo

spec:

  selector:

    app: mysql

  ports:

  - port: 3306
