day19/allow-backend->mysql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: connect-backend-to-mysql
  namespace: demo
spec:
  podSelector:
    matchLabels:
      app: mysql
      
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: backend

    ports: 
      - protocol: TCP
        port: 3306
